--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="styles/index.css" rel="stylesheet" type="text/css">
+        <link href="styles/login.css" rel="stylesheet" type="text/css">
         <title>Spotify Web Application</title>
     </head>
     <body>
@@ -16,5 +17,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-resource.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+        <!-- My Scripts -->
+        <script src="app.module.js"></script>
+        <script src="login/login.service.js"></script>
+        <script src="login/login.controller.js"></script>
     </body>
 </html>
