--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,14 +2,16 @@
 <html ng-app="spotifyWebApp">
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="styles/index.css" rel="stylesheet" type="text/css">
         <link href="styles/login.css" rel="stylesheet" type="text/css">
         <title>Spotify Web Application</title>
     </head>
     <body>
-
+        <div main-screen ng-controller="LoginController" ng-hide="hideMain"></div>
         <!-- Placeholder for views in AngularJS application -->
         <div ng-view="">
+            
         </div>
 
         <!-- Scripts -->
@@ -21,5 +23,6 @@
         <script src="app.module.js"></script>
         <script src="login/login.service.js"></script>
         <script src="login/login.controller.js"></script>
+        <script src="directives/main.module.js"></script>
     </body>
 </html>
