--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="styles/index.css" rel="stylesheet" type="text/css">
-        <link href="styles/login.css" rel="stylesheet" type="text/css">
         <title>Spotify Web Application</title>
     </head>
     <body>
@@ -21,8 +20,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
         <!-- My Scripts -->
         <script src="app.module.js"></script>
-        <script src="login/login.service.js"></script>
-        <script src="login/login.controller.js"></script>
+        <!-- <script src="login/login.service.js"></script>
+        <script src="login/login.controller.js"></script> -->
         <script src="directives/main.directive.js"></script>
         <script src="home/home.controller.js"></script>
     </body>
