Rename createUser page -> register.html

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,7 +18,7 @@
                 <input id="password" type="password" required>
             </div>
             <input type="submit" id="submit" value="Login"/>
-            <a href="/http://localhost:8080/register.html" class="btn-link">Register</a>
+            <a href="http://localhost:8080/register.html" class="btn-link">Register</a>
             <div id="forgot-password">
                 <a href="#" class="btn-non-link">Forgot your password?</a>
             </div>
