--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,14 +8,14 @@
     </head>
     <body>
         <header>Login</header>
-        <form>
+        <form action="/login" method="POST">
             <div id="email-container">
                 <label for="username">Email: </label>
-                <input id="username" type="email" required>
+                <input id="username" type="email" name="username" required>
             </div>
             <div id="password-container">
                 <label for="password">Password: </label>
-                <input id="password" type="password" required>
+                <input id="password" type="password" name="password" required>
             </div>
             <input type="submit" id="submit" value="Login"/>
             <a href="http://localhost:8080/register.html" class="btn-link">Register</a>
