Succeed in fixing delete playlist API after learning

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
         <title>Spotify Web Application</title>
     </head>
     <body>
-        <div main-screen></div>
+        <div main-web-spotify-screen></div>
         <!-- Placeholder for views in AngularJS application -->
         <div ng-view="">
             
